modify apint and attribute